--- a/source/_sass/_main-top-nav.scss
+++ b/source/_sass/_main-top-nav.scss
@@ -23,31 +23,42 @@
             width: 100%;
             //text-decoration: none;
 
+            @media screen and (min-width: 900px){
+                display: flex;
+                position: absolute;
+                left: 0;
+                height: 80px;
+                padding: 0 20px;
+                width: auto;
+                z-index: 1;
+            }
+
             //display:none;
             .main-nav-logo-text {
                 color: #000;
                 font-size: 16px;
                 font-weight: 700;
                 margin: auto;
-    
+
                 @media screen and (min-width: 900px){
-                    .main-nav-logo-text {
+
                         display: inline;
-                    }
+
                 }
              }
         }
 
-  
+
         .main-nav-wrapper {
             display: flex;
             width: auto;
+            background-color: #fff;
             position: relative;
 
-            @media screen and (min-width: 900px){            
+            @media screen and (min-width: 900px){
                 flex-grow: 1;
                 justify-content: center;
-            }           
+            }
 
             .main-nav-hamburger {
                 padding: 0 20px;
@@ -60,6 +71,15 @@
                 align-items: center;
                 border-radius: 0;
                 box-shadow: none;
+
+                .main-nav-hamburger-box {
+                    position: relative;
+                    width: 20px;
+                    height: 20px;
+                    display: block;
+                    -webkit-perspective: 40px;
+                    perspective: 40px;
+                }
             }
 
             .main-nav-hamburger, .sub-nav-trigger {
@@ -67,9 +87,57 @@
                 cursor: pointer;
                 background-color: transparent;
 
-                @media screen and (min-width: 900px){                    
-                    display: none;                    
+                @media screen and (min-width: 900px){
+                    display: none;
                 }
+            }
+
+            &.opened {
+
+                .main-nav-hamburger-inner {
+                    -webkit-transform: rotateY(180deg);
+                    transform: rotateY(180deg);
+                    background-color: transparent;
+                }
+
+                .main-nav-hamburger-inner:before {
+                    -webkit-transform: translate3d(0,6px,0) rotate(45deg);
+                    transform: translate3d(0,6px,0) rotate(45deg);
+                }
+                .main-nav-hamburger-inner:after {
+                    -webkit-transform: translate3d(0,-6px,0) rotate(-45deg);
+                    transform: translate3d(0,-6px,0) rotate(-45deg);
+                }
+      
+                >.main-nav-items {
+                    display: block;
+                }
+                
+            }
+
+            .main-nav-hamburger-inner:after {
+                bottom: -6px;
+            }
+
+            .main-nav-hamburger-inner {
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                display: block;
+                background-color: #2d2d2d;
+                border-radius: 1px;
+                top: 50%;
+                margin-top: -1px;
+                transition: background-color 0s cubic-bezier(.645,.045,.355,1) .1s,-webkit-transform .2s cubic-bezier(.645,.045,.355,1);
+                transition: transform .2s cubic-bezier(.645,.045,.355,1),background-color 0s cubic-bezier(.645,.045,.355,1) .1s;
+                transition: transform .2s cubic-bezier(.645,.045,.355,1),background-color 0s cubic-bezier(.645,.045,.355,1) .1s,-webkit-transform .2s cubic-bezier(.645,.045,.355,1);
+            }
+
+            .main-nav-hamburger-inner:after, .main-nav-hamburger-inner:before {
+                transition: -webkit-transform 0s cubic-bezier(.645,.045,.355,1) .1s;
+                transition: transform 0s cubic-bezier(.645,.045,.355,1) .1s;
+                transition: transform 0s cubic-bezier(.645,.045,.355,1) .1s,-webkit-transform 0s cubic-bezier(.645,.045,.355,1) .1s;
+                content: "";
             }
 
             .main-nav-hamburger-inner:before {
@@ -80,28 +148,6 @@
                 background-color: #000;
                 border-radius: 1px;
             }
-            .main-nav-hamburger-inner:after, .main-nav-hamburger-inner:before {
-                transition: -webkit-transform 0s cubic-bezier(.645,.045,.355,1) .1s;
-                transition: transform 0s cubic-bezier(.645,.045,.355,1) .1s;
-                transition: transform 0s cubic-bezier(.645,.045,.355,1) .1s,-webkit-transform 0s cubic-bezier(.645,.045,.355,1) .1s;
-                content: "";
-            }
-
-            &.opened {
-                .main-nav-hamburger-inner:before {
-                    -webkit-transform: translate3d(0,6px,0) rotate(45deg);
-                    transform: translate3d(0,6px,0) rotate(45deg);
-                }
-                .main-nav-hamburger-inner:after {
-                    -webkit-transform: translate3d(0,-6px,0) rotate(-45deg);
-                    transform: translate3d(0,-6px,0) rotate(-45deg);
-                }
-            }
-
-            .main-nav-hamburger-inner:after {
-                bottom: -6px;
-            }
-
 
 
             .main-nav-items {
@@ -120,7 +166,7 @@
                 z-index: 2;
                 margin: 0;
 
-                @media screen and (min-width: 900px){               
+                @media screen and (min-width: 900px){
                     display: flex;
                     position: static;
                     flex-direction: row;
@@ -132,7 +178,7 @@
                         height: inherit;
                         border-top: none;
                     }
-                }   
+                }
             }
 
             .main-nav-items, .udp-topNav {
@@ -147,10 +193,9 @@
                 .main-nav-menu-item {
                     position: relative;
                     display: block;
-                    border-top: 1px solid #f3f3f3;
                     content: "";
                 }
-            
+
                 .main-nav-menu-label {
                     position: relative;
                     padding: 0 20px;
@@ -169,8 +214,8 @@
                     height: 55px;
                     padding: 0 18px;
                 }
-            }            
-            
+            }
+
             .signin-wrapper {
                 display: table-column;
                 position: absolute;
@@ -180,7 +225,7 @@
                 width: auto;
                 z-index: 10;
             }
-        
+
             .signin-component-wrapper {
                 float: right;
             }
@@ -190,7 +235,7 @@
                 font-weight: 700;
                 cursor: pointer;
             }
-        
+
             .signin-component-username {
                 color: gray;
             }
@@ -238,17 +283,3 @@ a.spectrum-ActionButton, a.spectrum-Button {
     -ms-user-select: none;
     user-select: none;
 }
-
-
-
-
-
-
-
- 
-
- 
-
-
-
-
