Removing calc from CSS to fix IOS Chrome issue

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -1,5 +1,5 @@
 ---
---- 
+---
 
 $black: #000;
 $blue: #0D66D0;
@@ -411,7 +411,8 @@ body {
       max-height: 46px;
       @media screen and (min-width: 1024px) {
         transform: scale(1.58625);
-        left: calc(50% - 17px);
+        left: 50%;
+        margin-left: -17px;
         top: -1rem;
       }
     }
@@ -618,7 +619,7 @@ body {
         }
       }
       @media screen and (min-width: 1024px) {
-        min-height: 22rem;
+        min-height: 24rem;
       }
 
       h4 {
@@ -643,7 +644,8 @@ body {
           bottom: 1.875rem;
           padding-bottom: 0;
           position: absolute;
-          width: calc(100% - 4rem);
+          width: 100%;
+          margin-left: -2rem;
         }
       }
     }
@@ -760,10 +762,7 @@ section.home-card {
     .callout-item {
       bottom: 1.875rem;
       position: absolute;
-      width: calc(100% - 4rem);
-      @media screen and (min-width: 768px) {
-        width: 13.75rem;
-      }
+      width: 13.75rem;
       @media screen and (min-width: 1024px) {
         width: 17.75rem;
       }
